force-app/main/default/objects/Opportunity/fields/Lodging_Opportunity_Industry__c.field-meta.xml
<CustomField>
    <fullName>Lodging_Opportunity_Industry__c</fullName>
    <description>BCT Manufacturing Industry</description>
    <inlineHelpText>BCT Manufacturing Industry</inlineHelpText>
    <label>Lodging Opportunity Industry</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Lodging_Opportunity_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Affordable Housing</fullName>
            </value>
            <value>
                <fullName>Apartment</fullName>
            </value>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>Government</fullName>
            </value>
            <value>
                <fullName>Hotel / Motel</fullName>
            </value>
            <value>
                <fullName>Long term care</fullName>
            </value>
            <value>
                <fullName>Mixed use residential</fullName>
            </value>
            <value>
                <fullName>Resource</fullName>
            </value>
            <value>
                <fullName>Private Sector</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>