force-app/main/default/objects/Opportunity/fields/Lodging_Opportunity_Location__c.field-meta.xml
<CustomField>
    <fullName>Lodging_Opportunity_Location__c</fullName>
    <description>The Lodge or camp location</description>
    <inlineHelpText>The Lodge or camp location</inlineHelpText>
    <label>Lodging Opportunity Location</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Lodging_Opportunity_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Joslyn Creek</fullName>
            </value>
            <value>
                <fullName>Oilsands</fullName>
            </value>
            <value>
                <fullName>Ruth Lake</fullName>
            </value>
            <value>
                <fullName>Sierra Select</fullName>
            </value>
            <value>
                <fullName>Tamarack</fullName>
            </value>
            <value>
                <fullName>Altares</fullName>
            </value>
            <value>
                <fullName>Bonnyville</fullName>
            </value>
            <value>
                <fullName>Coleville</fullName>
            </value>
            <value>
                <fullName>Julienne</fullName>
            </value>
            <value>
                <fullName>Leismer</fullName>
            </value>
            <value>
                <fullName>*New Location</fullName>
            </value>
            <value>
                <fullName>Coleville Lodge</fullName>
            </value>
            <value>
                <fullName>Orla</fullName>
            </value>
            <value>
                <fullName>Alberta</fullName>
            </value>
            <value>
                <fullName>British Columbia</fullName>
            </value>
            <value>
                <fullName>Saskatchewan</fullName>
            </value>
            <value>
                <fullName>US</fullName>
            </value>
            <value>
                <fullName>Manitoba</fullName>
            </value>
            <value>
                <fullName>NWT</fullName>
            </value>
            <value>
                <fullName>Yukon</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>