force-app/main/default/objects/Opportunity/fields/Lodging_Opportunity_Type__c.field-meta.xml
<CustomField>
    <fullName>Lodging_Opportunity_Type__c</fullName>
    <description>Indicates type of Lodging opportunity</description>
    <inlineHelpText>Indicates type of Lodging opportunity</inlineHelpText>
    <label>Lodging Opportunity Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fixed Lodging</fullName>
            </value>
            <value>
                <fullName>Portable Camps</fullName>
            </value>
            <value>
                <fullName>Drill Camp</fullName>
            </value>
            <value>
                <fullName>Wastewater</fullName>
            </value>
            <value>
                <fullName>Manufacturing</fullName>
                <isActive>false</isActive>
                <label>Manufacturing</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>