force-app/main/default/objects/Opportunity/fields/Lost_Category__c.field-meta.xml
<CustomField>
    <fullName>Lost_Category__c</fullName>
    <description>This field controls the Opportunity Lost Field values.</description>
    <label>Lost Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>StageName</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Client</fullName>
            </value>
            <value>
                <fullName>Internal</fullName>
            </value>
            <value>
                <fullName>Fees</fullName>
            </value>
            <value>
                <fullName>Competitor</fullName>
            </value>
            <value>
                <fullName>System</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>