force-app/main/default/objects/Opportunity/fields/Lost_Reason__c.field-meta.xml
<CustomField>
    <fullName>Lost_Reason__c</fullName>
    <label>Lost Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Lost_Category__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Client (CLH location to project too far)</fullName>
            </value>
            <value>
                <fullName>Client (CLH Safety Numbers)</fullName>
            </value>
            <value>
                <fullName>Client (Client did not win work)</fullName>
            </value>
            <value>
                <fullName>Client (Job Cancelled or Deferred)</fullName>
            </value>
            <value>
                <fullName>Client (Lost RFP)</fullName>
            </value>
            <value>
                <fullName>Client (No bid - incumbent awarded)</fullName>
            </value>
            <value>
                <fullName>Client (No opportunity to bid)</fullName>
            </value>
            <value>
                <fullName>Client (Price Increase)</fullName>
            </value>
            <value>
                <fullName>Client (Prior CLH Service Failure)</fullName>
            </value>
            <value>
                <fullName>Client (Re-refined Disqualified)</fullName>
            </value>
            <value>
                <fullName>Client (Union Required)</fullName>
            </value>
            <value>
                <fullName>Competitor</fullName>
                <isActive>false</isActive>
                <label>Competitor</label>
            </value>
            <value>
                <fullName>Competitor (Better price)</fullName>
            </value>
            <value>
                <fullName>Competitor (Transportation)</fullName>
            </value>
            <value>
                <fullName>Competitor - Price</fullName>
                <isActive>false</isActive>
                <label>Competitor - Price</label>
            </value>
            <value>
                <fullName>Due to Capacity</fullName>
                <isActive>false</isActive>
                <label>Due to Capacity</label>
            </value>
            <value>
                <fullName>Fallout</fullName>
                <isActive>false</isActive>
                <label>Fallout</label>
            </value>
            <value>
                <fullName>Fall Out</fullName>
                <isActive>false</isActive>
                <label>Fall Out</label>
            </value>
            <value>
                <fullName>Fees (Mobilization)</fullName>
            </value>
            <value>
                <fullName>Fees (Off-Spec or surcharge)</fullName>
            </value>
            <value>
                <fullName>Fees (Recovery)</fullName>
            </value>
            <value>
                <fullName>Future Interest</fullName>
                <isActive>false</isActive>
                <label>Future Interest</label>
            </value>
            <value>
                <fullName>Internal (Abandoned by Owner)</fullName>
            </value>
            <value>
                <fullName>Internal (Capacity issue or Lack of Resources)</fullName>
                <isActive>false</isActive>
                <label>Internal (Capacity issue or Lack of Resources)</label>
            </value>
            <value>
                <fullName>Internal (Chose Alternative SK Service)</fullName>
            </value>
            <value>
                <fullName>Internal (Commercial terms failure)</fullName>
            </value>
            <value>
                <fullName>Internal (Created in Error)</fullName>
            </value>
            <value>
                <fullName>Internal (Declined to Bid)</fullName>
            </value>
            <value>
                <fullName>Internal (Duplicate Entry)</fullName>
            </value>
            <value>
                <fullName>Internal (Inactive &gt;90 Days)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>