force-app/main/default/objects/Opportunity/fields/Master_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Master_Record_Type__c</fullName>
    <description>Captures the Lead Record Type</description>
    <label>Master Record Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>