force-app/main/default/objects/Opportunity/fields/mti_pb__PriceBook_To_Use__c.field-meta.xml
<CustomField>
    <fullName>mti_pb__PriceBook_To_Use__c</fullName>
    <label>PriceBook To Use</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Clean Harbors</fullName>
                <default>true</default>
                <label>Clean Harbors</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>