force-app/main/default/objects/Opportunity/fields/My_TPM_Quotes__c.field-meta.xml
<CustomField>
    <fullName>My_TPM_Quotes__c</fullName>
    <formula>IF(
 TPM_Quote_Request_To_Person__c = $User.Id 
, True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>My TPM Quotes</label>
    <type>Checkbox</type>
</CustomField>