force-app/main/default/objects/Opportunity/fields/New_Government_Business__c.field-meta.xml
<CustomField>
    <fullName>New_Government_Business__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates this is a new government contract</description>
    <label>New Government Business</label>
    <type>Checkbox</type>
</CustomField>