force-app/main/default/objects/Opportunity/fields/Number_Amount__c.field-meta.xml
<CustomField>
    <fullName>Number_Amount__c</fullName>
    <formula>Amount</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>