force-app/main/default/objects/Opportunity/fields/Number_of_Day_for_Job_after_Verbal_Award__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Day_for_Job_after_Verbal_Award__c</fullName>
    <formula>Job_Scheduled_Date__c -  Job_Schedule_Request_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days after Job Schedule Requested</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>