force-app/main/default/objects/Opportunity/fields/Number_of_Products_Added__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Products_Added__c</fullName>
    <description>Number of Products Added to Opportunity</description>
    <label>Number of Products Added</label>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>