force-app/main/default/objects/Opportunity/fields/Opp_Closing_CY__c.field-meta.xml
<CustomField>
    <fullName>Opp_Closing_CY__c</fullName>
    <formula>YEAR(CloseDate) = YEAR(TODAY())</formula>
    <label>Opp Closing CY?</label>
    <type>Checkbox</type>
</CustomField>