force-app/main/default/objects/Opportunity/fields/Opp_Created_CY__c.field-meta.xml
<CustomField>
    <fullName>Opp_Created_CY__c</fullName>
    <formula>YEAR(DATEVALUE(CreatedDate)) = YEAR(TODAY())</formula>
    <label>Opp Created CY?</label>
    <type>Checkbox</type>
</CustomField>