force-app/main/default/objects/Opportunity/fields/Opp_Owner_First_Response_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Opp_Owner_First_Response_Date_Time__c</fullName>
    <description>Records the first response time of opportunity owner</description>
    <label>Opp Owner First Response (Date/Time)</label>
    <type>DateTime</type>
</CustomField>