force-app/main/default/objects/Opportunity/fields/Opp_Strength__c.field-meta.xml
<CustomField>
    <fullName>Opp_Strength__c</fullName>
    <label>Opp Strength</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Interest level high - Quote needed</fullName>
            </value>
            <value>
                <fullName>Interest level moderate - Sales follow up needed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>