force-app/main/default/objects/Opportunity/fields/Opportunity_Business_Segment__c.field-meta.xml
<CustomField>	
    <fullName>Opportunity_Business_Segment__c</fullName>	
    <label>Opportunity Business Segment</label>	
    <type>Picklist</type>	
    <valueSet>	
        <controllingField>Opportunity_Primary_Business__c</controllingField>	
        <restricted>true</restricted>	
        <valueSetDefinition>	
            <value>	
                <fullName>CP Harbor Quote</fullName>	
            </value>	
            <value>	
                <fullName>Daylighting</fullName>	
            </value>	
            <value>	
                <fullName>Field Service</fullName>	
            </value>	
            <value>	
                <fullName>FS Harbor Quote</fullName>	
            </value>	
            <value>	
                <fullName>Cannot Quote</fullName>	
            </value>	
            <value>	
                <fullName>Industrial Service</fullName>	
            </value>	
            <value>	
                <fullName>Oil &amp; Gas</fullName>	
            </value>	
            <value>	
                <fullName>Technical Service</fullName>	
            </value>	
        </valueSetDefinition>	
    </valueSet>	
</CustomField>