force-app/main/default/objects/Opportunity/fields/Opportunity_Creation_Date__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Creation_Date__c</fullName>
    <defaultValue>today()</defaultValue>
    <label>Opportunity Creation Date</label>
    <type>Date</type>
</CustomField>