force-app/main/default/objects/Opportunity/fields/Opportunity_Name_Hyperlink__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Name_Hyperlink__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp; CASESAFEID(Id), Name, &quot;_self&quot;)</formula>
    <label>Opportunity Name Hyperlink</label>
    <type>Text</type>
</CustomField>