force-app/main/default/objects/Opportunity/fields/Opportunity_owner_changed_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_owner_changed_Date_Time__c</fullName>
    <description>Stamps the date/time when opportunity owner changes</description>
    <label>Opportunity owner changed (Date/Time)</label>
    <type>DateTime</type>
</CustomField>