force-app/main/default/objects/Opportunity/fields/Opportunity_Owner_Manager__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Owner_Manager__c</fullName>
    <formula>Owner.Manager.Person_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Owner Manager</label>
    <type>Text</type>
</CustomField>