force-app/main/default/objects/Opportunity/fields/Opportunity_Owner_Primary_Business__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Owner_Primary_Business__c</fullName>
    <formula>text(Owner.Primary_Business__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Owner Primary Business</label>
    <type>Text</type>
</CustomField>