force-app/main/default/objects/Opportunity/fields/Opportunity_Owner_Response_Time_Hours__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Owner_Response_Time_Hours__c</fullName>
    <formula>IF( ISBLANK(  Opp_Owner_First_Response_Date_Time__c ) , FLOOR((( now()-  Opportunity_owner_changed_Date_Time__c )*24)), FLOOR((( Opp_Owner_First_Response_Date_Time__c - Opportunity_owner_changed_Date_Time__c )*24)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opp Owner First Response Time (Hours)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>