force-app/main/default/objects/Opportunity/fields/Opportunity_Owner_Sales_Person_Type__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Owner_Sales_Person_Type__c</fullName>
    <formula>text(Owner.Sales_Person_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Owner Sales Person Type</label>
    <type>Text</type>
</CustomField>