force-app/main/default/objects/Opportunity/fields/Opportunity_Owner_User_Area__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Owner_User_Area__c</fullName>
    <formula>text(Owner.Sales_Area__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Owner User Area</label>
    <type>Text</type>
</CustomField>