force-app/main/default/objects/Opportunity/fields/Opportunity_Primary_Business__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Primary_Business__c</fullName>
    <label>Opportunity Primary Business</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Clean Harbors</fullName>
            </value>
            <value>
                <fullName>Safety Kleen / BPS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>