force-app/main/default/objects/Opportunity/fields/Opportunity_Rank__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Rank__c</fullName>
    <description>Opportunity score for inside sales account scoring purpose</description>
    <formula>IF( 
AND(
TODAY() &gt;=  DATEVALUE( LastModifiedDate ) + 15,

OR( 
Owner.UserRole.DeveloperName = &apos;SK_INS_BPS_AM&apos;,
Owner.UserRole.DeveloperName = &apos;SK_INS_SKE_AM&apos;
),

OwnerId =  Account.OwnerId,

AND(
NOT(ISPICKVAL( StageName , &apos;6 - Pending Services&apos;)),
NOT(ISPICKVAL( StageName , &apos;7 - Closed Won&apos;)),
NOT(ISPICKVAL( StageName , &apos;8 - Closed Lost&apos;))
),

OR(
Account.RecordType.DeveloperName = &apos;Customer&apos;,
Account.RecordType.DeveloperName = &apos;Customer_Location&apos;
),

ISPICKVAL(Account.Status__c, &apos;Active&apos;),
NOT( ISBLANK( Account.WIN_ID__c ) )
), 

9, null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Rank</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>