force-app/main/default/objects/Opportunity/fields/Opportunity_tag__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_tag__c</fullName>
    <description>This field is for tracking designated disasters.  Not required for most opportunities.</description>
    <label>Opportunity tag</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>2018 Landfill Growth Campaign</fullName>
            </value>
            <value>
                <fullName>2022 BPS LOST LUBE - CALIFORNIA</fullName> 
            </value>
            <value>
                <fullName>2022 LOST UMO - CALIFORNIA</fullName>
            </value>
            <value>
                <fullName>ACT ENVIRO e-Manifest prospect</fullName>
            </value>
            <value>
                <fullName>AQ Pro</fullName>
            </value>
            <value>
                <fullName>AQ Pro Plus</fullName>
            </value>
            <value>
                <fullName>AR River Flood 2019</fullName>
            </value>
            <value>
                <fullName>BCT Sale Blitz</fullName>
            </value>
            <value>
                <fullName>Blended Oil East Cross Sell</fullName>
            </value>
            <value>
                <fullName>BuyBoard</fullName>
            </value>
            <value>
                <fullName>CAM High Value Target</fullName>
            </value>
            <value>
                <fullName>Canada HVT’s</fullName>
            </value>
            <value>
                <fullName>DEF (Diesel Exhaust Fluid)</fullName>
            </value>
            <value>
                <fullName>Drill Camps</fullName>
            </value>
            <value>
                <fullName>E&amp;C Firms Blitz ON/MB 2018</fullName>
            </value>
            <value>
                <fullName>Earth Day 2023</fullName>
            </value>
            <value>
                <fullName>East HVT’s</fullName>
            </value>
            <value>
                <fullName>E Canada Cross Sell</fullName>
            </value>
            <value>
                <fullName>E Canada Dewatering</fullName>
                <label>E Canada Dewatering 2019</label>
            </value>
            <value>
                <fullName>Elgin Bridge</fullName>
            </value>
            <value>
                <fullName>eManifest Campaign</fullName>
            </value>
            <value>
                <fullName>Fixed Lodging</fullName>
            </value>
            <value>
                <fullName>FluidKleens</fullName>
            </value>
            <value>
                <fullName>FS Cross Sell 2023</fullName>
            </value>
            <value>
                <fullName>FS Solid Waste Auditing</fullName>
            </value>
            <value>
                <fullName>GovWin</fullName>
            </value>
            <value>
                <fullName>Gulf Cross-Sell Blitz</fullName>
            </value>
            <value>
                <fullName>Gulf HVT’s</fullName>
            </value>
            <value>
                <fullName>H20 Integration Activity</fullName>
            </value>
            <value>
                <fullName>Healthcare Services Growth - BDR Team</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>