force-app/main/default/objects/Opportunity/fields/Parts_Cleaner_Type__c.field-meta.xml
<CustomField>
    <fullName>Parts_Cleaner_Type__c</fullName>
    <label>Parts Cleaner Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Solvent</fullName>
            </value>
            <value>
                <fullName>Aqueous</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>