force-app/main/default/objects/Opportunity/fields/PFAS_Count__c.field-meta.xml
<CustomField>
    <fullName>PFAS_Count__c</fullName>
    <label>PFAS Count</label>
    <summaryFilterItems>
        <field>OpportunityLineItem.PFAS__c</field>
        <operation>notEqual</operation>
        <value></value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>