force-app/main/default/objects/Opportunity/fields/Pipeline_Amount__c.field-meta.xml
<CustomField>
    <fullName>Pipeline_Amount__c</fullName>
    <formula>Amount *  Probability</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pipeline Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>