force-app/main/default/objects/Opportunity/fields/Pipeline_ID__c.field-meta.xml
<CustomField>
    <fullName>Pipeline_ID__c</fullName>
    <externalId>true</externalId>
    <label>Pipeline ID</label>
    <length>16</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>