force-app/main/default/objects/Opportunity/fields/Prevailing_Wage__c.field-meta.xml
<CustomField>
    <fullName>Prevailing_Wage__c</fullName>
    <defaultValue>false</defaultValue>
    <description>track opportunities that involve prevailing wage</description>
    <inlineHelpText>Used to track opportunities that involve prevailing wage</inlineHelpText>
    <label>Prevailing Wage</label>
    <type>Checkbox</type>
</CustomField>