force-app/main/default/objects/Opportunity/fields/Price_lost_by__c.field-meta.xml
<CustomField>
    <fullName>Price_lost_by__c</fullName>
    <label>Price % lost by</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Lost_Reason__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0-3%</fullName>
            </value>
            <value>
                <fullName>4-7%</fullName>
            </value>
            <value>
                <fullName>8-10%</fullName>
            </value>
            <value>
                <fullName>11-15%</fullName>
            </value>
            <value>
                <fullName>16-20%</fullName>
            </value>
            <value>
                <fullName>greater than 20%</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>