force-app/main/default/objects/Opportunity/fields/Quote_Attached__c.field-meta.xml
<CustomField>
    <fullName>Quote_Attached__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Cross Sell Quote Attached</description>
    <label>Quote Attached</label>
    <type>Checkbox</type>
</CustomField>