force-app/main/default/objects/Opportunity/fields/Quote_Number__c.field-meta.xml
<CustomField>
    <fullName>Quote_Number__c</fullName>
    <description>Reference for user to outside system quote number (manually entered)</description>
    <inlineHelpText>Reference for user to outside system quote number (manually entered)</inlineHelpText>
    <label>Quote Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>