force-app/main/default/objects/Opportunity/fields/Quote_Request_Status__c.field-meta.xml
<CustomField>
    <fullName>Quote_Request_Status__c</fullName>
    <description>Shows status of TPM or Central Quote request</description>
    <formula>if(   TPM_Quote_Request__c   = False ,
IMAGE(&quot;https://cleanharbors--c.na54.content.force.com/servlet/servlet.FileDownload?file=0150a000002IX8F&quot;, &quot;Quote Not Requested&quot;)
,if(TPM_Quote_Completed__c = False, &quot;Quote Requested&quot;, &quot;Quote Request Complete&quot;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Status of quote request (not submitted, quote requested, or quote request complete)</inlineHelpText>
    <label>Quote Request Status</label>
    <type>Text</type>
</CustomField>