force-app/main/default/objects/Opportunity/fields/Reporting_Opportunity_ID__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Opportunity_ID__c</fullName>
    <formula>Id + &quot;_&quot; +TEXT(MONTH(CloseDate)) +TEXT(DAY(CloseDate)) +TEXT(YEAR(CloseDate))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reporting Opportunity ID</label>
    <type>Text</type>
</CustomField>