force-app/main/default/objects/Opportunity/fields/RFP_received_date__c.field-meta.xml
<CustomField>
    <fullName>RFP_received_date__c</fullName>
    <description>Date RFP was received from the customer</description>
    <inlineHelpText>Date RFP was received from the customer</inlineHelpText>
    <label>RFP received date</label>
    <type>Date</type>
</CustomField>