force-app/main/default/objects/Opportunity/fields/RSS__c.field-meta.xml
<CustomField>
    <fullName>RSS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RSS</label>
    <type>Checkbox</type>
</CustomField>