force-app/main/default/objects/Opportunity/fields/Sales_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order_Number__c</fullName>
    <description>Place to reference Sales Order number resulting from the Opportunity</description>
    <label>Sales Order Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>